--- a/cuidados.html
+++ b/cuidados.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cuidados - MyCat</title>
+    <link rel="icon" href="assets/img/gato-icon2.png" type="image/png">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/xxl-style.css">
-    <link rel="stylesheet" href="assets/css/sm-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/lg-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/md-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -17,14 +21,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <div class="col-2">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                         </a>
                     </div>
                     <div class="col-8">
                         <ul class="navbar-nav d-flex justify-content-center align-items-center">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">MENÚ</a>
+                                <a class="nav-link" href="index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="razas.html">RAZAS</a>
@@ -87,12 +91,12 @@
 <section class="cuidados-main">
   <div class="container-fluid">
     <div class="row">
-         <div class="col-xl-6 col-md-12">
+         <div class="col-xxl-6 col-xl-6 col-md-12">
             <h1>Socialización temprana</h1>
              <hr>
                 <p class="txt-c2">La socialización temprana en gatos es un proceso crucial que tiene un impacto significativo en el desarrollo de su personalidad, comportamiento y bienestar a lo largo de su vida. </p>
              <div class="imagen-texto">
-                <img src="assets/img/gato-socia.jpg" alt="" class="img-cuidados">
+                <img src="assets/img/gato-socia.jpg" alt="Imagen socializacion" class="img-cuidados">
                  <ul class="circle-list txt-derecha custom-list">
                      <h2>Para una buena socialización:</h2>
                      <li>Exposición a personas</li>
@@ -101,12 +105,12 @@
                  </ul>
              </div>
          </div>
-         <div class="col-xl-6 col-md-12">
+         <div class="col-xxl-6 col-xl-6 col-md-12">
                 <h1>Aburrimiento</h1>
                 <hr>
                 <p class="txt-c2">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. </p>
                 <div class="imagen-texto">
-                    <img src="assets/img/gato-aburrido.jpg" alt="" class="img-cuidados">
+                    <img src="assets/img/gato-aburrido.jpg" alt="Imagen aburrido" class="img-cuidados">
                     <ul class="circle-list txt-derecha custom-list">
                         <h2>Para evitar problemas con el aburrimiento: </h2>
                         <li>Proporcionar rascador</li>
@@ -119,12 +123,12 @@
          </div>
     </div>
       <div class="row mt-5">
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Manejo del estrés</h1>
               <hr>
               <p class="txt-c2">El manejo del estrés en gatos es esencial para garantizar su bienestar emocional y físico. Los gatos son criaturas sensibles y pueden experimentar estrés debido a una variedad de situaciones y factores.</p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-estres.jpeg" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-estres.jpeg" alt="Imagen estres" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para evitar el estrés:</h2>
                       <li>Feromonas sintéticas</li>
@@ -135,12 +139,12 @@
                   </ul>
               </div>
           </div>
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Nutrición y control de peso</h1>
               <hr>
               <p class="txt-c2">La nutrición y el control de peso son esenciales para la salud y la longevidad de tu gato. Mantener una dieta equilibrada y controlar el peso de manera adecuada son responsabilidades fundamentales como dueño de un gato.</p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-nutri.jpg" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-nutri.jpg" alt="Imagen nutricion" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para una buena nutrición:</h2>
                       <li>Alimentación adecuada</li>
@@ -152,12 +156,12 @@
           </div>
       </div>
       <div class="row mt-5">
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Vacunación y desparacitación</h1>
               <hr>
               <p class="txt-c2">La vacunación y la desparasitación son medidas cruciales para prevenir enfermedades y proteger la salud de tu gato. Estas prácticas no solo benefician a tu mascota, sino que también ayudan a prevenir la propagación de enfermedades zoonóticas y a mantener un entorno más saludable para tu familia y otros animales. </p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-vacuna.jpeg" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-vacuna.jpeg" alt="Imagen vacuna" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para mantenerlo al día:</h2>
                       <li>Plan de vacunación</li>
@@ -167,12 +171,12 @@
                   </ul>
               </div>
           </div>
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Higiene</h1>
               <hr>
               <p class="txt-c2">La falta de atención a la higiene del pelo y el arenero de tu gato puede conllevar a una serie de problemas que afectan tanto a la salud del felino como a la armonía en tu hogar. </p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-cepillo.webp" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-cepillo.webp" alt="Imagen cepillo" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para una buena higiene:</h2>
                       <li>Cepillado regular</li>
@@ -184,12 +188,12 @@
           </div>
       </div>
       <div class="row mt-5">
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Atención y acompañamiento</h1>
               <hr>
               <p class="txt-c2">Los gatos, a pesar de su fama de independientes, requieren vínculos emocionales y estimulación mental para mantener su salud mental y emocional. La ausencia de estos cuidados puede conducir a problemas de comportamiento, obesidad, estrés y otros trastornos que afectan su calidad de vida.</p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-caricia.jpg" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-caricia.jpg" alt="Imagen caricias" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para una buena relación:</h2>
                       <li>Acaricio y afecto</li>
@@ -199,12 +203,12 @@
                   </ul>
               </div>
           </div>
-          <div class="col-xl-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-md-12">
               <h1>Diagnóstico y tratamientos</h1>
               <hr>
               <p class="txt-c2">Si tu gato muestra signos de enfermedad, como cambios en el apetito, la actividad o el comportamiento, es importante llevarlo al veterinario de inmediato.</p>
               <div class="imagen-texto">
-                  <img src="assets/img/gato-medico.jpg" alt="" class="img-cuidados">
+                  <img src="assets/img/gato-medico.jpg" alt="Imagen medico" class="img-cuidados">
                   <ul class="circle-list txt-derecha custom-list">
                       <h2>Para una buena salud:</h2>
                       <li>Atención a cambios de actitud</li>
@@ -221,29 +225,29 @@
 <section class="final">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-4 col-md-12">
-                <div class="d-flex justify-content-center justify-content-md-center">
+            <div class="col-xxl-4 col-xl-4 col-lg-4">
+                <div class="d-flex justify-content-center">
                     <img src="assets/img/gato-icon.png" width="140" alt="logo-footer" class="logo-f">
                 </div>
-                <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon  (2023)©</p>
+                <p class="d-flex justify-content-center cf-txt mt-3 d-flex ">Creado por Bairon  (2023)©</p>
             </div>
-            <div class="col-xl-4 col-md-12">
+            <div class="col-xxl-4 col-xl-4 col-lg-4">
                 <h1 class="contacto">CONTACTOS</h1>
                 <div class="img-foo">
-                    <img src="assets/img/email-icon.png" alt="" width="30px">
+                    <img src="assets/img/email-icon.png" alt="Icono EMail" width="30px">
                     <p class="txt-foo">baironcoyopae16@gmail.com</p>
                 </div>
                 <div class="img-foo">
-                    <img src="assets/img/wsp-icon.png" alt="" width="30px">
+                    <img src="assets/img/wsp-icon.png" alt="Icono Wsp" width="30px">
                     <p class="txt-foo">+56 9 0000 0000</p>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-12 f-icons">
+            <div class="col-xxl-4 col-xl-4 f-icons col-lg-4">
                 <h1 class="title">SÍGUENOS</h1>
-                <div class="d-flex justify-content-evenly justify-content-md-evenly">
-                    <img src="assets/img/in-icon.png" alt="Instagram" class="">
-                    <img src="assets/img/fb-icon.png" alt="Facebook" class="">
-                    <img src="assets/img/tw-icon.png" alt="Twitter" class="">
+                <div class="d-flex justify-content-evenly ">
+                    <a href="https://www.instagram.com/"><img src="assets/img/in-icon.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/"><img src="assets/img/fb-icon.png" alt="Facebook" class=""></a>
+                    <a href="https://twitter.com/home"><img src="assets/img/tw-icon.png" alt="Twitter" class=""></a>
                 </div>
             </div>
         </div>
