--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-
     <meta charset="UTF-8">
-    <!--TÍTULO DE PÁGINA-->
-    <title>GATOS</title>
-
+    <title>Inicio - MyCat</title>
+    <link rel="icon" href="assets/img/gato-icon2.png" type="image/png">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/xxl-style.css">
-    <link rel="stylesheet" href="assets/css/sm-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/lg-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/md-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
-<header>
+    <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <button class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,14 +21,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <div class="col-2">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                 </a>
                 </div>
                 <div class="col-8">
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">MENÚ</a>
+                        <a class="nav-link" href="index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="razas.html">RAZAS</a>
@@ -47,66 +48,61 @@
 </header>
 </head>
 <body>
-
 <!-- PRESENTACIÓN -->
 <section class="presentacion">
  <div class="container-fluid">
      <div class="row">
-         <div class="col-xl-6 col-xxl-6">
+         <div class="col-xxl-6 col-xl-6 col-lg-12 col-md-12 d-lg-flex justify-content-lg-center">
              <img src="assets/img/gato-rubio.png" class="imagen-p" alt="Imágen Presentación">
          </div>
-         <div class="col-xl-6 col-xxl-6">
-             <h1 class="titulo-p">Te damos la bienvenida a nuestra organización dedicada a los felinos</h1>
+         <div class="col-xxl-6 col-xl-6 col-lg-12 col-md-12">
+             <h1 class="titulo-p">Te damos la bienvenida a nuestra organización MyCat dedicada a los felinos</h1>
              <p class="texto-p">Nuestra meta es educar sobre el cuidado de nuestras queridas mascotas felinas, proporcionando conocimiento para comprender mejor sus necesidades y brindarles una vida feliz y saludable a nuestros adorados compañeros peludos.</p>
          </div>
      </div>
  </div>
 </section>
-
 <!--SECCION CUIDADOS -->
 <section class="cuidados">
     <div class="container-fluid">
         <h1 class="d-flex justify-content-center fw-bolder ">CUIDADOS A TENER EN CUENTA</h1>
         <h1 class="d-flex justify-content-center">PARA TUS FELINOS</h1>
         <div class="row align-items-center justify-content-center color1">
-            <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-vete.jpg" alt="Imágen Cuidados 1" class="align-items-center justify-content-center" >
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
+                <img src="assets/img/gato-vete.jpg" alt="Imágen Cuidados veterinario">
             </div>
-            <div class="col-xl-6 col-md-12">
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
                 <p class="txt-c d-flex">Las revisiones veterinarias periódicas permiten detectar problemas de salud en sus primeras etapas. Esto incluye el monitoreo de la presión arterial, la salud dental y otras condiciones médicas como la diabetes o la enfermedad renal crónica.</p>
-                <a class="arrow-link">Saber Más<span class="arrow"></span></a>
-
+                <a href="cuidados.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
             </div>
         </div>
         <div class="row align-items-center justify-content-center no-color">
-            <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-comiendo.jpg" alt="Imágen cuidados comida" class="align-items-center justify-content-center" >
-
+            <div class="col-xxl-6 col-xl-6 col-lg-6  col-md-12">
+                <img src="assets/img/gato-comiendo.jpg" alt="Imágen cuidados comida">
             </div>
-            <div class="col-xl-6 col-md-12">
+            <div class="col-xxl-6 col-xl-6 col-lg-6  col-md-12">
                 <p class="txt-c d-flex">Mantener un peso saludable es esencial para la longevidad y el bienestar de tu gato. El veterinario puede ayudarte a establecer un plan de alimentación y ejercicio adecuado.</p>
-                <a class="arrow-link">Saber Más<span class="arrow"></span></a>
-
+                <a href="cuidados.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
             </div>
         </div>
         <div class="row align-items-center justify-content-center color1">
-            <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-comportamiento.jpg" alt="Imágen cuidados comportamiento" class="align-items-center justify-content-center" >
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
+                <img src="assets/img/gato-comportamiento.jpg" alt="Imágen cuidados comportamiento">
             </div>
-            <div class="col-xl-6 col-md-12">
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
                 <p class="txt-c d-flex">Si tu gato experimenta cambios en su comportamiento, como letargo, agresión, ansiedad o miedos inexplicables, es importante consultar a un veterinario para descartar problemas de salud subyacentes.</p>
-                <a class="arrow-link">Saber Más<span class="arrow"></span></a>
+                <a href="cuidados.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
 
             </div>
         </div>
         <div class="row align-items-center justify-content-center no-color">
-            <div class="col-xl-6 col-md-12">
-                <img src="assets/img/gato-rascador.jpg" alt="Imágen cuidados rascador" class="align-items-center justify-content-center" >
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
+                <img src="assets/img/gato-rascador.jpg" alt="Imágen cuidados rascador">
 
             </div>
-            <div class="col-xl-6 col-md-12">
+            <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
                 <p class="txt-c d-flex">Ofrece un espacio adecuado para que tu gato se estire y afile sus garras, como un rascador. Los gatos necesitan espacio para moverse y explorar.</p>
-                <a class="arrow-link">Saber Más<span class="arrow"></span></a>
+                <a href="cuidados.html" class="arrow-link">Saber Más<span class="arrow"></span></a>
             </div>
         </div>
     </div>
@@ -117,32 +113,27 @@
         <h1 class="d-flex justify-content-center t-razas">CONOZCAMOS</h1>
         <h1 class="d-flex justify-content-center t2-razas">SUS RAZAS</h1>
         <div class="row">
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6 col-sm-12 pad-r">
                 <img src="assets/img/gato-maine-coon.jpg" alt="Imágen razas MaineCoon" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center ">Maine-Coon</h2>
             </div>
-
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6 col-sm-12 pad-r">
                 <img src="assets/img/gato-siames.jpg" alt="Imágen Siames" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center ">Siames</h2>
             </div>
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r">
+            <div class="col-xxl-4 col-xl-4 col-lg-6  col-md-6 col-sm-12 pad-r">
                 <img src="assets/img/gato-persa.webp" alt="Imágen Persa" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Persa</h2>
             </div>
-
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
+            <div class="col-xxl-4 col-xl-4 col-lg-6  col-md-6 col-sm-12 pad-r2">
                 <img src="assets/img/gato-bengali.jpg" alt="Imágen Bengali" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Bengali</h2>
             </div>
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
-
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-md-6 col-sm-12 pad-r2">
                 <img src="assets/img/gato-azul-ruso.webp" alt="Imágen AzulRuso" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Azul Ruso</h2>
-
             </div>
-            <div class="col-xl-4 col-md-6 col-sm-12 pad-r2">
-
+            <div class="col-xxl-4 col-xl-4 col-lg-6  col-md-6 col-sm-12 pad-r2">
                 <img src="assets/img/gato-siberiano.jpg" alt="Imágen Siberiano" class="img-fluid d-block mx-auto">
                 <h2 class="d-flex justify-content-center align-items-center">Siberiano</h2>
         </div>
@@ -153,9 +144,8 @@
  <section class="datos">
     <div class="container">
         <h1 class="d-flex justify-content-center d-datos">ALGUNOS DATOS CURIOSOS</h1>
-        <h2 class="d-flex justify-content-center d2-datos"></h2>
         <div class="row">
-            <div class="col-xl-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
+            <div class="col-xl-4 col-xxl-4 col-lg-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/gato-caja.webp" class="card-img-top" alt="Imágen datos caja">
                     <div class="card-body">
@@ -164,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-sm-12 espacio-d justify-content-center d-flex">
+            <div class="col-xl-4 col-xxl-4 col-lg-4 col-sm-12 espacio-d justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/gato-durmiendo" class="card-img-top" alt="Imágen datos durmiendo">
                     <div class="card-body">
@@ -173,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
+            <div class="col-xl-4 col-xxl-4 col-lg-4 col-sm-12 espacio-d align-items-center justify-content-center d-flex">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/gato-salto.jpg" class="card-img-top" alt="Imágen datos salto">
                     <div class="card-body">
@@ -189,13 +179,13 @@
 <section class="final">
     <div class="container-fluid">
     <div class="row">
-        <div class="col-xl-4 col-md-12">
-            <div class="d-flex justify-content-center justify-content-md-center">
+        <div class="col-xxl-4 col-xl-4 col-lg-4">
+            <div class="d-flex justify-content-center">
             <img src="assets/img/gato-icon.png" width="140" alt="logo-footer" class="logo-f">
             </div>
-            <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon  (2023)©</p>
+            <p class="d-flex justify-content-center cf-txt mt-3 d-flex ">Creado por Bairon  (2023)©</p>
         </div>
-        <div class="col-xl-4 col-md-12">
+        <div class="col-xxl-4 col-xl-4 col-lg-4">
             <h1 class="contacto">CONTACTOS</h1>
             <div class="img-foo">
                 <img src="assets/img/email-icon.png" alt="Icono EMail" width="30px">
@@ -206,12 +196,12 @@
                 <p class="txt-foo">+56 9 0000 0000</p>
             </div>
         </div>
-        <div class="col-xl-4 col-md-12 f-icons">
+        <div class="col-xxl-4 col-xl-4 f-icons col-lg-4">
             <h1 class="title">SÍGUENOS</h1>
-            <div class="d-flex justify-content-evenly justify-content-md-evenly">
-              <img src="assets/img/in-icon.png" alt="Instagram" class="">
-              <img src="assets/img/fb-icon.png" alt="Facebook" class="">
-              <img src="assets/img/tw-icon.png" alt="Twitter" class="">
+            <div class="d-flex justify-content-evenly ">
+                <a href="https://www.instagram.com/"><img src="assets/img/in-icon.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/"><img src="assets/img/fb-icon.png" alt="Facebook" class=""></a>
+                <a href="https://twitter.com/home"><img src="assets/img/tw-icon.png" alt="Twitter" class=""></a>
             </div>
         </div>
         </div>
