--- a/datos.html
+++ b/datos.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Datos - MyCat</title>
+    <link rel="icon" href="assets/img/gato-icon2.png" type="image/png">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/xxl-style.css">
-    <link rel="stylesheet" href="assets/css/sm-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xxl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/xl-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/lg-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/md-style.css">
+    <link rel="stylesheet" href="assets/css/mediaquery/sm-style.css">
     <!-- MENÚ DE PÁGINA -->
     <header>
         <nav class="navbar navbar-expand-lg">
@@ -17,14 +21,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <div class="col-2">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                         </a>
                     </div>
                     <div class="col-8">
                         <ul class="navbar-nav d-flex justify-content-center align-items-center">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">MENÚ</a>
+                                <a class="nav-link" href="index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="razas.html">RAZAS</a>
@@ -48,12 +52,12 @@
 <section class="titulo-datos">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 d-flex justify-content-center">
+            <div class="col-xxl-12 col-xl-12 col-12 d-flex justify-content-center">
                 <h1 class="bienvenida-d text-uppercase fw-bold">Secretos Peludos</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 d-flex justify-content-center">
+            <div class="col-xxl-12 col-xl-12 col-12 d-flex justify-content-center">
                 <h2 class="bienvenida-d2 text-uppercase fw-bolder">Datos Curiosos sobre Nuestros Amigos Gatos</h2>
             </div>
         </div>
@@ -64,25 +68,25 @@
     <div class="container">
         <!-- PRIMER ROW -->
         <div class="row">
-            <div class="col-4 ">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-olfato.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-olfato.jpg" class="card-img-top" alt="Imagen olfato">
                     <div class="card-body">
                         <p class="card-text txt-datos">Los gatos tienen un sentido del olfato increíblemente agudo y pueden detectar olores que son imperceptibles para los humanos. Esto les permite encontrar comida y rastrear a otros animales.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4 ">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4 ">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-colmillos.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-colmillos.jpg" class="card-img-top" alt="Imagen colmillos">
                     <div class="card-body">
                         <p class="card-text txt-datos">Los gatos tienen dientes afilados y pueden tener hasta 30 dientes en su boca. Sus colmillos son particularmente afilados y se utilizan para desgarrar la carne.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4 ">
+            <div class="col-xxl-4 col-xl-4 col-lg-12  col-4 d-lg-flex justify-content-lg-center ">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-bigotes.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-bigotes.jpg" class="card-img-top" alt="Imagen bigotes" >
                     <div class="card-body">
                         <p class="card-text txt-datos">Los bigotes de un gato son muy sensibles y están llenos de terminaciones nerviosas. Utilizan sus bigotes para medir espacios y determinar si pueden pasar por un lugar estrecho sin quedar atrapados.</p>
                     </div>
@@ -91,26 +95,26 @@
         </div>
         <!-- SEGUNDO ROW -->
         <div class="row mt-5">
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-batman.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-batman.jpg" class="card-img-top" alt="Imagen noche">
                     <div class="card-body">
                         <p class="card-text txt-datos"> Los gatos son animales crepusculares, lo que significa que son más activos durante el amanecer y el atardecer. Tienen una visión nocturna excepcional gracias a una mayor cantidad de células sensibles a la luz en sus ojos.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-caza.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-caza.jpg" class="card-img-top" alt="Imagen caza">
                     <div class="card-body">
                         <p class="card-text txt-datos">Los gatos domésticos conservan sus instintos de caza, y pueden cazar una variedad de presas, desde insectos hasta pequeños roedores. Este comportamiento es parte de su naturaleza cazadora.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-12 col-4 d-lg-flex  justify-content-lg-center">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-limpio.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-limpio.jpg" class="card-img-top" alt="Imagen limpieza">
                     <div class="card-body">
                         <p class="card-text txt-datos"> Los gatos pasan una gran cantidad de tiempo acicalándose. Esto no solo los mantiene limpios, sino que también les ayuda a regular su temperatura corporal y a mantener sus músculos y articulaciones en buen estado.</p>
                     </div>
@@ -119,25 +123,25 @@
         </div>
         <!-- TERCER ROW -->
         <div class="row mt-5">
-            <div class="col-4 mt-3">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4 mt-3">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-pelaje.webp" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-pelaje.webp" class="card-img-top" alt="Imagen pelaje">
                     <div class="card-body">
                         <p class="card-text txt-datos">Cada gato tiene un patrón de pelaje único, al igual que las huellas dactilares en los humanos. No hay dos gatos con el mismo patrón de manchas o rayas.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-grito.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-grito.jpg" class="card-img-top" alt="Imagen grito">
                     <div class="card-body">
                         <p class="card-text txt-datos">Los gatos utilizan una variedad de sonidos para comunicarse con los humanos y otros gatos. Los maullidos, ronroneos, gruñidos y bufidos son solo algunos ejemplos de cómo expresan sus necesidades y emociones.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-12 col-4 d-lg-flex  justify-content-lg-center">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-cola.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-cola.jpg" class="card-img-top" alt="Imagen cola">
                     <div class="card-body">
                         <p class="card-text txt-datos">La cola de un gato es una parte importante de su sistema de comunicación. Una cola erguida generalmente indica que un gato está contento, mientras que una cola erizada puede significar que está asustado o enojado.</p>
                     </div>
@@ -146,25 +150,25 @@
         </div>
         <!-- CUARTO ROW -->
         <div class="row mt-5">
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-durma.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-durma.jpg" class="card-img-top" alt="Imagen durmiendo">
                     <div class="card-body">
                         <p class="card-text txt-datos"> Aunque los ronquidos son más comunes en los perros, algunos gatos también pueden roncar. Esto suele ocurrir cuando están profundamente dormidos.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-6 col-4">
                 <div class="card" style="width: 23rem;">
-                    <img src="assets/img/gato-pata.jpg" class="card-img-top" alt="...">
+                    <img src="assets/img/gato-pata.jpg" class="card-img-top" alt="Imagen patas">
                     <div class="card-body">
                         <p class="card-text txt-datos">Las almohadillas de las patas de un gato son como huellas dactilares. Cada gato tiene un patrón de almohadillas único que se puede utilizar para identificarlo de manera similar a cómo usamos las huellas dactilares en humanos.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-xxl-4 col-xl-4 col-lg-12 col-4 d-lg-flex  justify-content-lg-center">
                 <div class="card"  style="width: 23rem;">
-                    <img src="assets/img/gato-lengua.jpg" class="card-img-top img-dato" alt="...">
+                    <img src="assets/img/gato-lengua.jpg" class="card-img-top img-dato" alt="Imagen lengua">
                     <div class="card-body">
                         <p class="card-text txt-datos">Los gatos tienen papilas gustativas especiales en su lengua llamadas "papilas gustativas filiformes" que les ayudan a raspar la carne de los huesos y desgarrar la carne con eficacia.</p>
                     </div>
@@ -177,13 +181,13 @@
 <section class="final">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-4 col-md-12">
-                <div class="d-flex justify-content-center justify-content-md-center">
+            <div class="col-xxl-4 col-xl-4 col-lg-4">
+                <div class="d-flex justify-content-center">
                     <img src="assets/img/gato-icon.png" width="140" alt="logo-footer" class="logo-f">
                 </div>
-                <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon  (2023)©</p>
+                <p class="d-flex justify-content-center cf-txt mt-3 d-flex ">Creado por Bairon  (2023)©</p>
             </div>
-            <div class="col-xl-4 col-md-12">
+            <div class="col-xxl-4 col-xl-4 col-lg-4">
                 <h1 class="contacto">CONTACTOS</h1>
                 <div class="img-foo">
                     <img src="assets/img/email-icon.png" alt="Icono EMail" width="30px">
@@ -194,12 +198,12 @@
                     <p class="txt-foo">+56 9 0000 0000</p>
                 </div>
             </div>
-            <div class="col-xl-4 col-md-12 f-icons">
+            <div class="col-xxl-4 col-xl-4 f-icons col-lg-4">
                 <h1 class="title">SÍGUENOS</h1>
-                <div class="d-flex justify-content-evenly justify-content-md-evenly">
-                    <img src="assets/img/in-icon.png" alt="Instagram" class="">
-                    <img src="assets/img/fb-icon.png" alt="Facebook" class="">
-                    <img src="assets/img/tw-icon.png" alt="Twitter" class="">
+                <div class="d-flex justify-content-evenly ">
+                    <a href="https://www.instagram.com/"><img src="assets/img/in-icon.png" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/"><img src="assets/img/fb-icon.png" alt="Facebook" class=""></a>
+                    <a href="https://twitter.com/home"><img src="assets/img/tw-icon.png" alt="Twitter" class=""></a>
                 </div>
             </div>
         </div>
